Refactored KMP2 Solver